# cookiecutter-python

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.project_name }}/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: on-merge-to-main.yaml  on-pull-request.yaml
