[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
repository = "https://github.com/{{cookiecutter.github_owner}}/{{cookiecutter.project_name}}"
readme = "README.md"

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"


[tool.poetry.dev-dependencies]
mypy = "^0.961"
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''

[tool.isort]
profile = "black"

[tool.mypy]
strict = "True"
files = "."
exclude = [
    '\.venv',
]
