[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.2"
description = "{{cookiecutter.project_description}}"
license = "{{cookiecutter.open_source_license}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
repository = "https://github.com/{{cookiecutter.github_owner}}/{{cookiecutter.project_name}}"
readme = "README.md"

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"


[tool.poetry.group.dev.dependencies]
mypy = "^0.961"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
  ".git",
  ".pytest_cache",
  "python-venv",
  ".venv",
  "build",
  "dist",
  ".tox",
  ".env",
  "__pycache__"
]

[tool.ruff.lint]
select = ["B", "C", "E", "F", "W", "T4", "B9"]
ignore = ["E203", "E501", "W503", "F403"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
strict = "True"
files = "."
exclude = [
    '\.venv',
]
